# Glacier

./: Cargo.toml  README.md
crates/glacier_buf_ext/: Cargo.toml
crates/glacier_buf_ext/src/: core.rs  util.rs
crates/glacier_dev/: Cargo.toml
crates/glacier_dev/src/: main.rs
crates/glacier_editor/: Cargo.toml
crates/glacier_editor/src/: custom3d_wgpu_shader.wgsl  main.rs
crates/glacier_fs/: Cargo.toml
crates/glacier_fs/src/: lib.rs
crates/glacier_fs/src/db/: partition.rs
crates/glacier_fs/src/dbx/: reader.rs  writer.rs
crates/glacier_fs/src/ebx/: ebx.hexpat  mod.rs  partition.rs  type_resolver.rs
crates/glacier_fs/src/fb/: bundle.hexpat  bundle.rs  cas.rs  catalog.rs  db_object.rs  hash.rs  manifest.rs  memory_fs.rs  mod.rs  types.rs
crates/glacier_fs/src/internal/: mod.rs  trait_coercion.rs
crates/glacier_fs/src/io/: native_reader.rs
crates/glacier_fs/src/util/: trait_coercion.rs
crates/glacier_fs/tests/: ebx_to_dbx.rs  read_game_data.rs
crates/glacier_fs/tests/data/: Pathfinding_Schematic2.dbx  spacearcade_networkregistry_Win32.dbx
crates/glacier_pipeline/: Cargo.toml  run.sh
crates/glacier_pipeline/src/: bundle_breaker.rs  dbx_conversion.rs  ebx_indexing.rs  lib.rs  main.rs  mutator.rs  pipeline.rs  policy.rs
crates/glacier_pipeline/src/mutator/: blueprint.rs
crates/glacier_reflect/: Cargo.toml
crates/glacier_reflect/src/: builtin.rs  data_container.rs  lib.rs  member.rs  primitive.rs  type_info.rs  type_registry.rs
crates/glacier_reflect_custom/: Cargo.toml
crates/glacier_reflect_custom/src/: lib.rs
crates/glacier_reflect_custom/tests/: register.rs
crates/glacier_reflect_ext/: Cargo.toml
crates/glacier_reflect_ext/src/: lib.rs  util.rs
crates/glacier_reflect_swbf2/: Cargo.toml
crates/glacier_reflect_swbf2/src/: a_i_tools.rs  achievements.rs  ant.rs  app.rs  audio.rs  audio_core_voice_monitor_shared.rs  auto_players.rs  battle_a_i.rs  battle_a_i_shared.rs  bifrost.rs  cloth.rs  cloth_base.rs  core.rs  creature_loco.rs  creature_loco_shared.rs  debris.rs  decal.rs  decal_base.rs  decal_volume_base.rs  decal_volume_render.rs  decal_volume_sim.rs  deformation.rs  destruction.rs  dice_commons.rs  dice_commons_shared.rs  dice_online_shared.rs  dice_shooter.rs  dice_shooter_shared.rs  dice_svg_rasterizer.rs  dice_svg_rasterizer_shared.rs  e_a_character_physics.rs  e_a_character_physics_shared.rs  effect.rs  effect_base.rs  emitter.rs  emitter_base.rs  entitlements.rs  entity.rs  expression.rs  first_party_overlay.rs  (+88 more)
crates/glacier_reflect_swbf2/tests/: register.rs
crates/glacier_resource/: Cargo.toml
crates/glacier_resource/glacier_resource_proc/: Cargo.toml
crates/glacier_resource/glacier_resource_proc/src/: lib.rs
crates/glacier_resource/src/: lib.rs
crates/glacier_resource/src/rvm/: mod.rs  pipeline.rs  reader.rs  rvm.hexpat  types.rs
crates/glacier_resource/src/terrain/: mod.rs  streaming_tree.rs
crates/glacier_reverse_pipeline/: Cargo.toml
crates/glacier_reverse_pipeline/src/: bundle_breaker.rs  dbx_conversion.rs  ebx_indexing.rs  lib.rs  main.rs  memory_fs.rs  mutator.rs  pipeline.rs
crates/glacier_reverse_pipeline/src/mutator/: blueprint.rs  class_info_asset.rs  level_description.rs  mesh_variation_db.rs  network_registry.rs  rvm_database.rs
crates/glacier_reverse_pipeline/src/packaged_conversion/: dbx_conversion.rs  ebx_indexing.rs  mod.rs
crates/glacier_sdk/: Cargo.toml
crates/glacier_sdk/src/: lib.rs
crates/glacier_store/: Cargo.toml
crates/glacier_store/src/: lib.rs
crates/glacier_store/src/domain/: mod.rs  sandbox.rs  stack.rs  string_lock.rs
crates/glacier_store/src/index/: asset_index.rs  mod.rs  stack.rs
crates/glacier_store/src/temp/: mod.rs
crates/glacier_util/: Cargo.toml
crates/glacier_util/src/: endian.rs  guid.rs  hash.rs  lib.rs  math.rs  sha1.rs
examples/fs/: ebx_read_droideka.rs  ebx_read_levellist.rs
examples/reflect/: print_type.rs
examples/sdk/: decompile_game.rs
