[package]
name = "glacier"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
glacier_sdk = { path = "crates/glacier_sdk" }

[dev-dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }

[[example]]
name = "decompile_game"
path = "examples/sdk/decompile_game.rs"
doc-scrape-examples = true

[package.metadata.example.decompile_game]
hidden = true

[[example]]
name = "print_type"
path = "examples/reflect/print_type.rs"
doc-scrape-examples = true
