[package]
name = "glacier"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "crates/glacier_resource/glacier_resource_proc",
]

[dependencies]
glacier_sdk = { path = "crates/glacier_sdk" }

[dev-dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
bytes = "1.7.2"

[[example]]
name = "decompile_game"
path = "examples/sdk/decompile_game.rs"
doc-scrape-examples = true

[package.metadata.example.decompile_game]
hidden = true

[[example]]
name = "print_type"
path = "examples/reflect/print_type.rs"
doc-scrape-examples = true

[[example]]
name = "ebx_read_levellist"
path = "examples/fs/ebx_read_levellist.rs"
doc-scrape-examples = true

[[example]]
name = "ebx_read_droideka"
path = "examples/fs/ebx_read_droideka.rs"
doc-scrape-examples = true
