[package]
name = "glacier_fs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
glacier_util = { path = "../glacier_util" }
glacier_reflect = { path = "../glacier_reflect" }
tracing = "0.1.40"
async-recursion = "1.1.1"
paste = "1.0.15"
bytes = "1.8.0"
thiserror = "1.0.65"

[dev-dependencies]
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
