[package]
name = "glacier_fs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
glacier_util = { path = "../glacier_util" }
glacier_reflect = { path = "../glacier_reflect" }
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
glacier_reflect_ext = { path = "../glacier_reflect_ext" }
glacier_buf_ext = { path = "../glacier_buf_ext" }
tracing = "0.1.41"
async-recursion = "1.1.1"
paste = "1.0.15"
bytes = "1.8.0"
thiserror = "1.0.65"
async-compression = { version = "0.4.18", features = [ "tokio", "zstd" ] }
async-trait = "0.1.83"
