[package]
name = "glacier_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
tracing = "0.1.41"
futures = "0.3.31"
thiserror = "2.0.9"
glacier_util = { path = "../glacier_util" }
glacier_reflect = { path = "../glacier_reflect" }
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
glacier_reflect_custom = { path = "../glacier_reflect_custom" }
glacier_reflect_ext = { path = "../glacier_reflect_ext" }
glacier_resource = { path = "../glacier_resource" }
glacier_fs = { path = "../glacier_fs" }
glacier_store = { path = "../glacier_store" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.83"
typemap_rev = "0.3.0"
bincode = "1.3.3"
