[package]
name = "glacier_reflect_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
glacier_reflect = { path = "../glacier_reflect" }
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
glacier_util = { path = "../glacier_util" }
