[package]
name = "glacier_resource"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
glacier_resource_proc = { path = "./glacier_resource_proc" }
glacier_buf_ext = { path = "../glacier_buf_ext" }
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
glacier_reflect = { path = "../glacier_reflect" }
glacier_util = { path = "../glacier_util" }
bytes = "1.8.0"
glam = "0.29.0"
cityhasher = "0.1.0"
cityhash-sys = "1.0.6"
thiserror = "2.0.9"
strum = "0.26.3"
strum_macros = "0.26.4"
paste = "1.0.15"
serde = { version = "1.0.216", features = ["derive"] }
serde_with = "3.12.0"
