[package]
name = "glacier_reverse_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
tracing = "0.1.41"
futures = "0.3.31"
thiserror = "1.0.65"
glacier_util = { path = "../glacier_util" }
glacier_reflect = { path = "../glacier_reflect" }
glacier_reflect_swbf2 = { path = "../glacier_reflect_swbf2" }
glacier_fs = { path = "../glacier_fs" }
glacier_store = { path = "../glacier_store" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.83"
